header,hero,about,footer styles added

--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -1,5 +1,7 @@
 @font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/montserrat-v23-latin_cyrillic-regular.woff2') format('woff2'),
-		url('../fonts/montserrat-v23-latin_cyrillic-regular.woff') format('woff');
+	font-family: 'Raleway';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../fonts/raleway-v28-latin_cyrillic-regular.woff2') format('woff2'),
+		url('../fonts/raleway-v28-latin_cyrillic-regular.woff') format('woff');
 }
