--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,13 @@
 @import 'style/fonts';
 @import 'style/var';
 @import 'style/style';
+@import 'style/header';
+@import 'style/navigation';
+@import 'style/main-link';
+@import 'style/hero';
+@import 'style/slider';
+@import 'style/price';
+@import 'style/about';
+//@import 'style/reserve';
+//@import 'style/radio';
+@import 'style/footer';
