--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -1,34 +1,45 @@
 html {
-	position: relative;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
+	font-feature-settings: 'pnum' on, 'lnum' on;
 }
 
  *,
  *::before,
  *::after {
 	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
 }
 
 body {
 	min-width: 320px;
-	min-height: 100vh;
-	font-family: Arial, sans-serif;
+	font-family: Raleway, sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.2;
+	color: $main-color;
+
+	background-color: $bg-color;
 }
 
 
 img, svg {
 	max-width: 100%;
-	max-height: 100%;
+	//max-height: 100%;
 	height: auto;
 }
 
 button {
+	display: block;
 	padding: 0;
 	cursor: pointer;
 }
 
 a {
-	text-decoration: none;
+	//text-decoration: none;
 	color: inherit;
 }
 
@@ -60,7 +71,18 @@ If container 1180px then add 30px * 2 padding to max-width,
 */
 
 .container {
-	max-width: 1240px;
-	padding: 0 30px;
+	max-width: 1312px;
+	padding: 0 48px;
 	margin: 0 auto;
+
+	@include laptop {  //don't delete. To prevent bug with @media order
+		padding: 0 48px;
+	}
+
+	@include tablet {   //don't delete. To prevent bug with @media order
+		padding: 0 48px;
+	}
+	@include mobile {
+		padding: 0 24px;
+	}
 }
