--- a/src/style/_radio.scss
+++ b/src/style/_radio.scss
@@ -5,7 +5,7 @@
 	appearance: none;
 
 	&__input {
-	display: none; // TODO classes focus, checked, disabled in scss, look down 
+	display: none;
 	}
 
 	&__label {
